# fastapi-mcp-example

./: .env.template  .gitignore  README.md  pyproject.toml
app/: config.py  dependencies.py  main.py  start_mcp.py
app/clients/: openweather.py
app/models/: contact.py
app/routes/: contacts.py
app/routes/contacts/: __init__.py
app/routes/linebot/: __init__.py  schema.py
app/routes/linebots/: __init__.py
app/routes/openweather/: __init__.py  schema.py
