[project]
name = "fastapi-mcp-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi-mcp>=0.3.3",
    "fastapi[standard]>=0.115.12",
    "line-bot-sdk>=3.17.1",
    "mcp==1.7.0",
    "tinydb>=4.8.2",
]

[dependency-groups]
dev = [
    "ruff>=0.11.9",
]

[tool.ruff]
line-length = 79
